2008-12-10  Vincent Untz  <vuntz@gnome.org>

	* panel-util.[ch]: move all panel_g_(s)list functions to...
	* libpanel-util/panel-list.[ch]: ... here (new files)
	* libpanel-util/Makefile.am: add new file
	* panel-profile.c:
	* panel-widget.c: include panel-list.h

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	Remove dependency on gnome_util_home_file()

	* launcher.h: move PANEL_LAUNCHERS_PATH to panel-util.c
	* launcher.c: (panel_launcher_delete): update to use
	panel_launcher_is_in_personal_path()
	Move some functions to panel-util.c. That's suboptimal, but I can't
	figure out yet how I want the code to be organized, so...
	* panel-util.c: (panel_launcher_get_personal_path): new, real
	gnome_util_home_file() killer
	(panel_launcher_is_in_personal_path): new, does what the name implies
	(panel_launcher_get_gfile),
	(panel_launcher_get_uri), (panel_launcher_get_filename): moved from
	launcher.c
	(panel_make_full_path): trivial update
	* panel-util.h: also remove UpdateFunction which was unused

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* panel-properties-dialog.c:
	(panel_properties_dialog_setup_image_chooser): remove the filter
	chooser in the file chooser: since there's only one filter, the chooser
	is not really useful.

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: (panel_run_dialog_launch_command): Use
	gnome_desktop_prepend_terminal_to_vector() instead of
	gnome_prepend_terminal_to_vector(), to slowly get rid of libgnome

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* panel-background.c:
	(panel_background_set_image_background_on_widget): don't use a cairo
	matrix, we can do the same thing by just shifting the pixmap in
	gdk_cairo_set_source_pixmap()

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	Lots of "remove deprecated API usage" and single include fun.

	* panel-compatibility.c: (copy_gconf_dir):
	s/gconf_entry_free/gconf_entry_unref
	* panel-applet-frame.c: add missing include for glib/gi18n.h